hphp/hack/test/typecheck/magic_methods/magic_set.php.exp
File "magic_set.php", line 4, characters 3-30:
Magic `__set` methods are no longer supported (Parsing[1002])
