hphp/hack/test/typecheck/magic_methods/magic_set.php
<?hh

class C {
  public function __set():void {}
}
